# hermes

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TESTING.md  WRITE_TEST_SKILL.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/skills/hermes-pytest/: SKILL.md
.claude/skills/hermes-pytest/references/: async-patterns.md  fixtures-guide.md  test-patterns.md
.github/workflows/: README.md  claude-code-review.yml  tests.yml
.opencode/: opencode.json
.serena/: project.yml
.serena/memories/: container-session-handler-test-updates.md  hermes-phase1-research-findings.md  hermes-phase5-session-recording.md  hermes-phase7-session-timeout-implementation-plan.md  hermes-post-mvp-considerations.md  hermes-progress.md  hermes-project-specifications.md  hermes-security-verification-script-design.md  hermes-security-verification-script-implementation.md  sandtrap-mvp-implementation-plan.md  sandtrap-phase1-research-findings.md  sandtrap-phase3-design-specification.md  sandtrap-phase4-implementation-status.md  sandtrap-phase5-session-recording.md  sandtrap-post-mvp-considerations.md  sandtrap-progress.md  sandtrap-project-specifications.md  sandtrap-security-verification-script-design.md  sandtrap-session-summary-phase3-complete.md  sandtrap-todo-list.md  session-error-handling-improvement.md  session-recording-validation-complete.md  session-recording-validation-plan.md  test-mocking-analysis.md
config/: config.example.yaml  config.test.yaml
containers/targets/ubuntu/: Dockerfile
scripts/: test_connect.py
src/hermes/: __init__.py  __main__.py  config.py
src/hermes/container/: pool.py  security.py
src/hermes/server/: asyncssh_backend.py  auth.py  backend.py
src/hermes/session/: proxy.py  recorder.py
src/sandtrap/: __init__.py  __main__.py  config.py
src/sandtrap/container/: pool.py  security.py
src/sandtrap/server/: asyncssh_backend.py  auth.py  backend.py
src/sandtrap/session/: proxy.py  recorder.py
tests/: conftest.py
tests/integration/: README_RECORDING_TESTS.md  test_auth_backend_integration.py  test_config_loading.py  test_container_pool_docker.py  test_container_pool_lifecycle.py  test_container_proxy_docker.py  test_full_session_docker.py  test_recording_validation.py  test_session_flow.py
tests/unit/: conftest.py  test_asyncssh_backend.py  test_auth.py  test_config.py  test_container_pool.py  test_container_proxy.py  test_container_security.py  test_main.py  test_session_handler.py  test_session_recorder.py  test_session_timeout.py  test_session_timeout_handler.py  test_timeout.py
